Lessons Learnt First Draft
First draft nearly ready.  Spelling mistakes corrected.

--- a/jors2016.bib
+++ b/jors2016.bib
@@ -244,3 +244,29 @@ doi = {10.1080/1475939X.2016.1173089},
   address = {New York, NY, USA},
   keywords = {co-located collaboration, collaborative design, log-file analysis, multi-touch, shareable interfaces, touch analysis},
 } 
+
+@inproceedings{kizilcec:2013,
+  title={Collaborative learning in geographically distributed and in-person groups},
+  author={Ren{\'e} F. Kizilcec},
+  booktitle={AIED 2013 Workshops Proceedings Volume},
+  volume={67},
+  year={2013}
+}
+
+@inproceedings{daradoumis2000,
+  title={A methodological approach to networked collaborative learning: Design and pedagogy Issues},
+  author={T. Daradoumis and J. M. Marqu{\`e}s},
+  booktitle={Networked Learning 2000. Proceedings of the 2000 International Conference on Innovative Approaches to Lifelong Learning and Higher Education through the Internet},
+  pages={72--77},
+  year={2000},
+  organization={ERIC}
+}
+
+@incollection{mcconnell2012,
+  title={Networked learning: A brief history and new trends},
+  author={David McConnell and Vivien Hodgson and Lone Dirckinck-Holmfeld},
+  booktitle={Exploring the theory, pedagogy and practice of networked learning},
+  pages={3--24},
+  year={2012},
+  publisher={Springer}
+}
