--- a/jors2016.bib
+++ b/jors2016.bib
@@ -1,8 +1,8 @@
-@Article{higgins-et-al:2011,
+@Article{higgins-et-al:2012,
   author = 	 {Steve Higgins and Emma Mercier and Liz Burd and Andrew Joyce-Gibbons},
   title = 	 {{Multi-touch tables and collaborative learning}},
   journal = 	 {{British Journal of Educational Technology}},
-  year = 	 {2011},
+  year = 	 {2012},
   volume = 	 {43},
   number = 	 {6},
   pages = 	 {1041-1054}
@@ -30,7 +30,7 @@
   title  = {{Openfire}},
   author = {Igniterealtime},
   howpublished   = {\url{https://www.igniterealtime.org/projects/openfire/}},
-  note = {[Accessed: 2016-11-01]},
+  note = {[Accessed: 2016-11-18]},
   year = {2016},
 }
 
@@ -38,7 +38,7 @@
   title  = {Hazelcast},
   author = {{Hazelcast Inc.}},
   howpublished   = {\url{https://hazelcast.org/}},
-  note = {[Accessed: 2016-11-01]},
+  note = {[Accessed: 2016-11-18]},
   year = {2016},
 }
 
@@ -46,7 +46,7 @@
   title  = {{ZeroTier}},
   author = {{ZeroTier Inc.}},
   howpublished   = {\url{https://www.zerotier.com}},
-  note = {[Accessed: 2016-11-01]},
+  note = {[Accessed: 2016-11-18]},
   year = {2016},
 }
 
@@ -54,7 +54,7 @@
   title  = {{SynergyView}},
   author = {Phyo Kyaw and James McNaughton},
   howpublished   = {\url{https://doi.org/10.5281/zenodo.54566}},
-  note = {[Accessed: 2016-11-01]},
+  note = {[Accessed: 2016-11-18]},
   year = {2010},
   doi = {10.5281/zenodo.54566},
   publisher={Zenodo},
@@ -62,9 +62,9 @@
 
 @misc{hatch:2011,
   title  = {{SynergyNet 3.1}},
-  author = {James McNaughton and Phyo Kyaw},
+  author = {Andrew Hatch and James McNaughton},
   howpublished   = {\url{https://doi.org/10.5281/zenodo.54562}},
-  note = {[Accessed: 2016-11-01]},
+  note = {[Accessed: 2016-11-18]},
   year = {2011},
   doi = {10.5281/zenodo.54562},
   publisher={Zenodo},
@@ -253,7 +253,7 @@ doi = {10.1080/1475939X.2016.1173089},
   year={2013}
 }
 
-@inproceedings{daradoumis2000,
+@inproceedings{daradoumis:2000,
   title={A methodological approach to networked collaborative learning: Design and pedagogy Issues},
   author={T. Daradoumis and J. M. Marqu{\`e}s},
   booktitle={Networked Learning 2000. Proceedings of the 2000 International Conference on Innovative Approaches to Lifelong Learning and Higher Education through the Internet},
@@ -262,11 +262,105 @@ doi = {10.1080/1475939X.2016.1173089},
   organization={ERIC}
 }
 
-@incollection{mcconnell2012,
+@incollection{mcconnell:2012,
   title={Networked learning: A brief history and new trends},
   author={David McConnell and Vivien Hodgson and Lone Dirckinck-Holmfeld},
   booktitle={Exploring the theory, pedagogy and practice of networked learning},
   pages={3--24},
   year={2012},
   publisher={Springer}
+}
+
+@article{dillenbourg:2011,
+  title={Interactive tabletops in education},
+  author={Pierre Dillenbourg and Michael Evans},
+  journal={International Journal of Computer-Supported Collaborative Learning},
+  volume={6},
+  number={4},
+  pages={491--514},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{mercier:2014b,
+  title={Creating joint representations of collaborative problem solving with multi-touch technology},
+  author={Emma Mercier and Steve Higgins},
+  journal={Journal of Computer Assisted Learning},
+  volume={30},
+  number={6},
+  pages={497--510},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{hatch:2011b,
+  title={{NumberNet}: Using multi-touch technology to support within and between group mathematics learning},
+  author={Andrew Hatch and Steve Higgins and Andrew Joyce-Gibbons and Emma Mercier},
+  booktitle={Proceedings of the 9th International Conference on Computer Supported Collaborative Learning},
+  pages={176--183},
+  year={2011},
+  organization={International Society of the Learning Sciences Madison, WI}
+}
+
+@inproceedings{everitt:2006,
+  author={Kathrine Everitt and Chia Shen and Kathy Ryall and Clifton Forlines}, 
+  booktitle={First IEEE International Workshop on Horizontal Interactive Human-Computer Systems (TABLETOP '06)}, 
+  title={MultiSpace: enabling electronic document micro-mobility in table-centric, multi-device environments}, 
+  year={2006}, 
+  pages={8 pp.-}, 
+  doi={10.1109/TABLETOP.2006.23}, 
+  month={Jan}
+}
+
+@article{mercier:2014c,
+  title={The effects of room design on computer-supported collaborative learning in a multi-touch classroom},
+  author={Emma M Mercier and Steve E Higgins and Andrew Joyce-Gibbons},
+  journal={Interactive Learning Environments},
+  number={ahead-of-print},
+  pages={1--19},
+  year={2014},
+  publisher={Routledge}
+}
+
+@article{mercier2014d,
+  title={Different leaders: Emergent organizational and intellectual leadership in children’s collaborative learning groups},
+  author={Emma M Mercier and Steven E Higgins and Laura da Costa},
+  journal={International Journal of Computer-Supported Collaborative Learning},
+  volume={9},
+  number={4},
+  pages={397--432},
+  year={2014},
+  publisher={Springer US}
+}
+
+@book{odonnell:2013,
+  title={Collaborative learning, reasoning, and technology},
+  author={ Angela M O'Donnell and Cindy E Hmelo-Silver and Gijsbert Erkens},
+  year={2013},
+  publisher={Routledge}
+}
+
+@article{barron:2008,
+  title={Powerful learning: Studies show deep understanding derives from collaborative methods},
+  author={Brigid Barron and Linda Darling-Hammond},
+  journal={Edutopia.(October 2008). DOI= http://www. edutopia. org/inquiry-project-learning-research},
+  year={2008}
+}
+
+@incollection{lipponen:2004,
+  title={Practices and orientations of CSCL},
+  author={Lasse Lipponen and Kai Hakkarainen and Sami Paavola},
+  booktitle={What we know about CSCL},
+  pages={31--50},
+  year={2004},
+  publisher={Springer}
+}
+
+@incollection{stahl:2014,
+  title={Computer-supported collaborative learning: An historical perspective},
+  author={Gerry Stahl and Timothy Koschmann and Dan Suthers},
+  booktitle={Cambridge handbook of the learning sciences, revised version},
+  pages={479--500},
+  year={2014},
+  publisher={Cambridge UK}
 }
