--- a/jors2016.tex
+++ b/jors2016.tex
@@ -15,11 +15,11 @@
 % names
 \author[1]{James McNaughton}
 \author[2]{Tom Crick}
-% \author[3]{}
+\author[3]{Andrew Joyce-Gibbons}
 % \author[4]{}
 % \author[5]{}
 % affiliation
-\affil[1]{School of Education, Durham University, UK}
+\affil[1 \& 3]{ School of Education, Durham University, UK}
 \affil[2]{Department of Computing \& Information Systems, Cardiff
   Metropolitan University, UK}
 % \affil[3]{}
@@ -28,6 +28,7 @@
 % emails
 \affil[1]{\protect\url{j.a.mcnaughton@durham.ac.uk}}
 \affil[2]{\protect\url{tcrick@cardiffmet.ac.uk}}
+\affil[3]{\protect\url{andrew.joyce-gibbons@durham.ac.uk}}
 % \affil[3]{\protect\url{}}
 % \affil[4]{\protect\url{}}
 % \affil[5]{\protect\url{}}
@@ -50,14 +51,34 @@ The case-study also details how software was used to provide a thorough and defe
 
 \section{Introduction}
 
-Large touch screen interfaces offer many opportunities for collaboration between co-located learners~\cite{harris:2009,kharrufa:2013}.
-Not just when the interface is shared but when two or more co-located interfaces are networked together to allow for the transfer of materials between them~\cite{kreitmayer:2013,mercier:2013}.
-In the past there have been several studies investigating the impact of these configuration on UK Key Stage 2 and 3 classrooms. 
+Large touch screen interfaces offer many opportunities for collaboration between co-located learners.
+Not just when the interface is shared but when two or more co-located interfaces are networked together to allow for the transfer of materials between them~\cite{kharrufa:2013,kreitmayer:2013}.
+As well as presenting enticing pedagogical opportunities, the successful integration of multi-touch tables into viable computer supported collaborative learning activities presents major challenges both technically and for teacher orchestration~\cite{dillenbourg:2011}. 
 
-% More on education + collaborative education impact of touchscreens?
+This study proceeds from the view that collaborative small group learning activities have the potential to lead to considerable learning gains for the participants, more so than activities they completed individually~\cite{odonnell:2013,barron:2008}.
+There is a clear role for technology to play in supporting this collaboration, enabling configurations for group work and types of task which are not otherwise possible.
+Computer supported collaborative learning theory and research emphasises the role of technology in supporting learner participation, knowledge acquisition (information) and knowledge creation (knowledge objects and social practices)~\cite{lipponen:2004}.
+Much CSCL research emphasises the importance of face to face interaction and the design of tasks and optimising the participation of learners~\cite{stahl:2014}.
+
+The growing interest in face to face collaboration by learners engaged in mutual negotiation of meaning (both procedural and factual) inspired the creation of the SynergyNet project.
+An EPSRC/ESRC funded research project, researchers on the SynergyNet project identified important technical and pedagogical challenges which they sought to supply~\cite{higgins-et-al:2012}.
+Important technical challenges included the development of teacher orchestration tools which enabled seamless transition between individual spaces, group spaces and interactive whiteboards.
+These were respectively termed the private, shared and public spaces in the classroom by Dillenbourg and Evans~\cite{dillenbourg:2011}.
+They also identified the potential for a group to share information with other groups, building on the work of Everitt and colleagues~\cite{everitt:2006}.
+However, in this case the mechanism developed did not involve sharing between personal devices such as computers and a multi-touch table.
+Rather, SynergyNet developed tools to allow sharing seamlessly between tables~\cite{hatch:2011b}.
+
+Pedagogically, SynergyNet studies focused on children 10-11 years old, working in collaborative groups nested within a lab-classroom.
+Data was collected on each group and each table as tasks were completed simultaneously.
+Data was also collected on the arrangement of the whole class and the teachers’ behaviour whilst supporting the activity.
+Studies showed that in tasks completed using multi-touch tables compared to tasks completed using paper-based equivalents, learners showed better uptake of ideas~\cite{mercier:2015}, showed evidence of more sophisticated reasoning  and differences in the amount of time spent in procedural rather than problem-focused talk~\cite{higgins-et-al:2012} in the multi-touch condition compared with the paper-based condition.
+Further studies highlighted the importance of the division of roles and showed different patterns of organisational and intellectual leadership in groups using mutli-touch tables~\cite{mercier2014d}, the importance of classroom layout for task completion~\cite{mercier:2014c}, the differences in teacher decision making process when shifting from group to whole-class dialogue~\cite{Joyce-Gibbons:2016}, the development of adaptive expertise among group members~\cite{mercier:2013} and the affordances of the tables to structure representations of reasoning processes~\cite{mercier:2014b}.
+
+The principle limitation of the SynergyNet study was the fact that research was only ever conducted in the lab-classroom rather than in a real-world school environment.
+This is one of the chief priorities of the ongoing research agenda, to bring the tables into authentic classroom settings.
 
 Previous studies have been concerned with how the use of multiple large touch screen interfaces impacts on collaborative education in single environments, i.e. Individual classrooms~\cite{mohammed:2012,kreitmayer:2013,mercier:2015}.
-However, with the opportunities afforded by large networks, such as the internet, for collaboration in education across multiple locations~\cite{daradoumis2000,mcconnell2012}, the limitations of co-located interfaces become much more apparent.
+However, with the opportunities afforded by large networks, such as the internet, for collaboration in education across multiple locations~\cite{daradoumis:2000,mcconnell:2012}, the limitations of co-located interfaces become much more apparent.
 One of the key advantages of collaborative education across multiple locations is that it allows students with a potentially much wider range of backgrounds and skills to work together~\cite{kizilcec:2013}.
 
 This work details the work done to support a trial that was designed around investigating the impact of applying the use of large touch screen interfaces to multiple separate locations, specifically UK Key Stage 2 classrooms, on collaborative education.
@@ -74,28 +95,37 @@ The case-study examines how technology was used to meet the trial's design and f
 The case-study also details how technology was used to manage the data resulting from the trial.
 
 
-\section{SynergyNet}
+\section{SynergyNet in Schools}
 
-It was decided that the SynergyNet~\cite{alagha-et-al:2010,higgins-et-al:2011} framework would be used as part of the trial as it is built specifically for supporting applications intended to be used in education.
-SynergyNet allows for applications (apps) built with the framework to apply gesture listeners to any content items they contain.
-This has the result of allowing any content item supported by the framework to be moved and manipulated by users through common multi-touch gestures.
+As part of the SynergyNet project a software framework was developed to support applications designed for multi-touch interfaces.
+This SynergyNet framework allowed any content item supported produced in its supported apps to be moved and manipulated by users through common multi-touch gestures.
 
-There are two main versions of the framework; SynergyNet 2 and SynergyNet 3.
-The big difference between these two frameworks is that a lot of the functionality is supplied at a framework level in SynergyNet 3 rather than at an app level as it was in SynergyNet 2.
-For the remainder of this work any references to the SynergyNet framework relate to SynergyNet 3 unless stated otherwise.
-
-The framework supports many features beyond its ability to be used with multiple multi-touch technologies.
-One such feature is its ability to support communication between multiple interfaces via a network connection.
+The SynergyNet framework also supports communication between multiple interfaces via a network connection.
 This use of networked interfaces allows media-based content to be easily shared between multiple users.
-The framework supports several different methods to transfer materials between instances of its apps.
-In apps used in previous studies, control over the transfer of materials has been given to the teacher who uses a separate interface to instigate the transferral of content~\cite{alagha-et-al:2010,mercier:2016}.
+This allowed both intra- and inter-group collaboration in early SynergyNet studies~\cite{mercier:2014b}.
+The framework supports several different methods of transferring materials between instances of its apps.
+This feature was presented as a capability of the teacher orchestration tools within the SynergyNet classroom which allowed the teacher to decide when to instigate the transferral of content~\cite{alagha-et-al:2010,mercier:2016}.
+An additional capability, called `Network Flick' was developed which allowed learners working at each table to ‘flick’ content (transfer content from one table to another by using a flicking gesture)~\cite{reetz-et-al:2006}.
+Whilst technically this was achievable in the lab-classroom, the co-location of all groups resulted in a study design which made the gesture’s capabilities pedagogically redundant.
 
-% Education impact of SynergyNet in the past.
+Recent research building on the outcomes of the SynergyNet project has focused on developing the use of multi-touch tables for group work in multiple schools.
+This has resulted in the network flick gesture of the framework now having a pedagogical purpose.
+The project this research formed part of has entailed working with two schools which are geographically distant in the UK (approximately 300 miles apart), one near Durham City in England and the other near Caerphilly in Wales.
+Despite their distance, the areas share a common industrial heritage.
+Specifically they were at the heart of the coal mining industry which powered the industrial revolution.
+Latterly both areas have experienced economic trauma with mine closures and de-industrialisation.
+The impact on the children living in former mining communities has led to a dislocation with their environment as they grow up with little or no first-hand knowledge of mining.
+Both participating schools reported that learners in their schools were aware of mining as a ‘heritage’ activity but did not relate it to their lives now or consider it relevant to people of their age.
+
+The project sought to address this by establishing shared group work through the network flick gesture.
+The multi-touch tables were used to support children in collaborative group tasks previously intended to be completed by a single group assumed to be working in a single location.
+However, to try and increase the sense of common history and shared endeavour, the task was split with children in both locations being asked to work together to solve the problem, communicating via video conferencing software (visual and verbal) as well as by sharing data via the network flick gesture
+This paper focuses on the technical challenges in the design and implementation of the framework which was shown to be stable and accessible by learners in both locations.
+Further papers, already in writing, will focus on the pedagogical and social implications of the study.
 
 \subsection{Network Flick}
 
-SynergyNet's support for multi-touch interface allows users to perform a flicking~\cite{reetz-et-al:2006} motion to transfer content.
-This gesture is built on the metaphor of pushing items around on a low-friction surface (like ice) where a small amount of initial effort can allow the item the force is exerted on to travel a great distance.
+The network flick gesture is built on the metaphor of pushing items around on a low-friction surface (like ice) where a small amount of initial effort can allow the item the force is exerted on to travel a great distance.
 An amount of friction can be applied to decelerate flicked objects over time which is useful for both helping users keep control of items (i.e.
 so they don't travel indefinitely at high speeds after being flicked making them difficult to grab and stop) and for making the behaviour of the item better match its real world equivalent from the metaphor of objects on ice.
 
